--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ html {
   flex-direction: column;
   border-radius: 10px;
   padding: 0px 15px 0px 15px;
+  box-shadow: 2px 4px 20px 2px rgba(0, 0, 0, 0.6);
 }
 .front {
   background-color: darkblue;
